Began process of laying out view.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,25 @@
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
+  <style name="NumberStyle" parent="AppTheme">
+    <item name="android:textSize">80sp</item>
+    <item name="android:textColor">@color/numberColor</item>
+  </style>
+
+  <style name="TallyStyle" parent="AppTheme">
+    <item name="android:textSize">20sp</item>
+  </style>
+
+  <style name="TransformNameStyle" parent="TallyStyle">
+    <item name="android:textColor">#00C000</item>
+  </style>
+
+  <!--<style name="PassiveCorrectStyle" parent="TallyStyle">-->
+    <!--<item name="android:textColor">#808080</item>-->
+  <!--</style>-->
+
+  <style name="ImageNameStyle" parent="TallyStyle">
+    <item name="android:textColor">#C00000</item>
+  </style>
+
 </resources>
