--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,54 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:padding="8dp"
   tools:context=".MainActivity">
 
   <TextView
+    android:id="@+id/transform_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Hello World!"
+    style="@style/TransformNameStyle"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"/>
+
+  <TextView
+    android:id="@+id/image_view"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    style="@style/ImageNameStyle"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintRight_toRightOf="parent"/>
+
+  <TextView
+    android:id="@+id/number_view"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    style="@style/NumberStyle"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
+    app:layout_constraintTop_toTopOf="parent"
+    />
+
+  <ToggleButton
+    android:id="@+id/transform_toggle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textOn="@string/fizz_toggle_on"
+    android:textOff="@string/fizz_toggle_off"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintRight_toLeftOf="@+id/buzz_toggle"/>
+
+  <ToggleButton
+    android:id="@+id/buzz_toggle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textOn="@string/buzz_toggle_on"
+    android:textOff="@string/buzz_toggle_off"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toRightOf="@id/fizz_toggle"/>
 
 </android.support.constraint.ConstraintLayout>
