--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,15 +9,7 @@
   tools:context=".MainActivity">
 
   <TextView
-    android:id="@+id/transform_view"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    style="@style/TransformNameStyle"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"/>
-
-  <TextView
-    android:id="@+id/image_view"
+    android:id="@+id/current_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     style="@style/ImageNameStyle"
@@ -25,34 +17,31 @@
     app:layout_constraintRight_toRightOf="parent"/>
 
   <TextView
-    android:id="@+id/number_view"
+    android:id="@+id/transform_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    style="@style/NumberStyle"
+    style="@style/TransformNameStyle"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"/>
+
+  <ToggleButton
+    android:id="@+id/image_toggle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textOn="Image!"
+    android:textOff="Image"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    />
+    app:layout_constraintRight_toLeftOf="@+id/transform_toggle"/>
 
   <ToggleButton
     android:id="@+id/transform_toggle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textOn="@string/fizz_toggle_on"
-    android:textOff="@string/fizz_toggle_off"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintRight_toLeftOf="@+id/buzz_toggle"/>
-
-  <ToggleButton
-    android:id="@+id/buzz_toggle"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textOn="@string/buzz_toggle_on"
-    android:textOff="@string/buzz_toggle_off"
+    android:textOn="Transform!"
+    android:textOff="Transform"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toRightOf="@id/fizz_toggle"/>
+    app:layout_constraintLeft_toRightOf="@id/image_toggle"/>
 
 </android.support.constraint.ConstraintLayout>
