--- a/app/src/main/res/layout/dialog_transform.xml
+++ b/app/src/main/res/layout/dialog_transform.xml
@@ -3,16 +3,8 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:layout="http://schemas.android.com/tools">
- 
- <Spinner
-   android:id="@+id/transforms_spinner"
-   android:layout_width="fill_parent"
-   android:layout_height="wrap_content"
-   android:backgroundTint="@color/colorPrimaryDark"
-   layout:gravity="start"/>
- 
+  xmlns:app="http://schemas.android.com/apk/res-auto">
+
  <FrameLayout
    android:id="@+id/individual_transform_container"
    android:layout_width="match_parent"
