--- a/app/src/main/res/layout/fragment_gaussian_blur.xml
+++ b/app/src/main/res/layout/fragment_gaussian_blur.xml
@@ -5,30 +5,30 @@
   android:layout_height="match_parent"
   xmlns:tools="http://schemas.android.com/tools"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  tools:context=".controller.TransformPickerFragment">
+  tools:context=".controller.TransformPickerDialogFragment">
 
-  <!--<EditText-->
-    <!--android:id="@+id/gaussian_x"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:hint="@string/gaussian_x"-->
-    <!--app:layout_constraintTop_toTopOf="parent"-->
-    <!--app:layout_constraintBottom_toTopOf="@+id/gaussian_y"/>-->
+  <EditText
+    android:id="@+id/gaussian_x"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="@string/gaussian_x"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toTopOf="@+id/gaussian_y"/>
 
-  <!--<EditText-->
-    <!--android:id="@+id/gaussian_y"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:hint="@string/gaussian_y"-->
-    <!--app:layout_constraintTop_toBottomOf="@id/gaussian_x"-->
-    <!--app:layout_constraintBottom_toTopOf="@id/gaussian_standard_deviation"/>-->
+  <EditText
+    android:id="@+id/gaussian_y"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="@string/gaussian_y"
+    app:layout_constraintTop_toBottomOf="@id/gaussian_x"
+    app:layout_constraintBottom_toTopOf="@id/gaussian_standard_deviation"/>
 
-  <!--<EditText-->
-    <!--android:id="@+id/gaussian_standard_deviation"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:hint="@string/gaussian_standard_deviation"-->
-    <!--app:layout_constraintTop_toBottomOf="@id/gaussian_y"-->
-    <!--app:layout_constraintBottom_toBottomOf="parent"/>-->
+  <EditText
+    android:id="@+id/gaussian_standard_deviation"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="@string/gaussian_standard_deviation"
+    app:layout_constraintTop_toBottomOf="@id/gaussian_y"
+    app:layout_constraintBottom_toBottomOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
