--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,20 +8,12 @@
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
-  <style name="TallyStyle" parent="AppTheme">
-    <item name="android:textSize">20sp</item>
-  </style>
+  <style name="GaussianBlur" parent="Theme.AppCompat.Light.Dialog">
 
-  <style name="TransformNameStyle" parent="TallyStyle">
-    <item name="android:textColor">#00C000</item>
-  </style>
+    <item name="android:windowIsTranslucent">true</item>
 
-  <!--<style name="PassiveCorrectStyle" parent="TallyStyle">-->
-    <!--<item name="android:textColor">#808080</item>-->
-  <!--</style>-->
+    <item name="android:windowBackground">@android:color/transparent</item>
 
-  <style name="ImageNameStyle" parent="TallyStyle">
-    <item name="android:textColor">#C00000</item>
   </style>
 
 </resources>
