--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,11 +8,25 @@
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
+  <!--<style name="NumberStyle" parent="AppTheme">-->
+    <!--<item name="android:textSize">80sp</item>-->
+    <!--<item name="android:textColor">@color/numberColor</item>-->
+  <!--</style>-->
+
+  <style name="TallyStyle" parent="AppTheme">
+    <item name="android:textSize">20sp</item>
+  </style>
+
+  <style name="TransformNameStyle" parent="TallyStyle">
+    <item name="android:textColor">#00C000</item>
+  </style>
+
   <style name="GaussianBlur" parent="Theme.AppCompat.Light.Dialog">
 
     <item name="android:windowIsTranslucent">true</item>
 
     <item name="android:windowBackground">@android:color/transparent</item>
+    <item name="android:padding">16dp</item>
 
   </style>
 
