--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,6 @@
 
   tools:context=".controller.MainActivity">
 
-
   <ImageView
   android:id="@+id/transforming_image"
   android:layout_width="match_parent"
@@ -25,7 +24,7 @@
 
   <Button
     android:id="@+id/transform_button"
-    android:layout_width="wrap_content"
+    android:layout_width="120dp"
     android:layout_height="wrap_content"
     android:text="Transform"
     app:layout_constraintBottom_toBottomOf="parent"
@@ -33,8 +32,20 @@
     app:layout_constraintRight_toLeftOf="@+id/image_button"/>
 
   <Button
+    android:id="@+id/history_button"
+    android:layout_width="120dp"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="10dp"
+    android:text="History"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    />
+
+  <Button
     android:id="@+id/image_button"
-    android:layout_width="wrap_content"
+    android:layout_width="120dp"
     android:layout_height="wrap_content"
     android:text="Image"
     app:layout_constraintRight_toRightOf="parent"
