--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -4,8 +4,12 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".controller.HistoryFragment">
+  tools:context=".controller.History">
 
-
+<android.support.v7.widget.RecyclerView
+  android:id="@+id/recycler_view"
+  android:layout_width="0dp"
+  android:layout_height="wrap_content">
+</android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
