--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -4,12 +4,13 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   tools:context=".controller.History">
 
 <android.support.v7.widget.RecyclerView
   android:id="@+id/recycler_view"
-  android:layout_width="0dp"
-  android:layout_height="wrap_content">
-</android.support.v7.widget.RecyclerView>
+  android:layout_width="match_parent"
+  android:layout_height="0dp"
+  app:layout_constraintTop_toTopOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
