--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
     android:layout_height="match_parent"
     android:scaleType="fitCenter"
     android:src="@drawable/test_source"
-    />
+    tools:ignore="ContentDescription"/>
 
   <FrameLayout
     android:id="@+id/fragment_container"
@@ -38,7 +38,7 @@
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="10dp"
-    android:text="History"
+    android:text="@string/history"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     />
@@ -47,7 +47,7 @@
     android:id="@+id/image_button"
     android:layout_width="120dp"
     android:layout_height="wrap_content"
-    android:text="Image"
+    android:text="@string/image"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toRightOf="@id/transform_button"/>
