--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
     <item name="android:textColor">#00C000</item>
   </style>
 
-  <style name="GaussianBlur" parent="Theme.AppCompat.Light.Dialog">
+  <style name="FastBlur" parent="Theme.AppCompat.Light.Dialog">
 
     <item name="android:windowIsTranslucent">true</item>
 
